CSProject/force-app/main/default/objects/SA_ID_Info_Tracker__c/SA_ID_Info_Tracker__c.object-meta.xml
<CustomObject>
    <label>SA ID Information Tracker</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>SA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA ID Information Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>