CSProject/force-app/main/default/objects/SA_ID_Info_Tracker__c/fields/Is_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Is_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Citizen</label>
    <type>Checkbox</type>
</CustomField>