CSProject/force-app/main/default/objects/SA_ID_Info_Tracker__c/fields/SA_ID__c.field-meta.xml
<CustomField>
    <fullName>SA_ID__c</fullName>
    <externalId>true</externalId>
    <label>SA ID</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>